# Where-Winds-Meet-Midi-Player

./: .gitignore  Dockerfile  README.md  Where-Winds-Meet-Midi-Player.code-workspace  docker-compose.yml  index.html  package.json  tailwind.config.js  vite.config.js
.github/workflows/: build.yml  coverage.yml  release-main.yml
scripts/: buildComponent.mjs  check-coverage.js  install-as-admin.ps1  run-as-admin.ps1
src/: App.svelte  app.css  setupTests.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: discovery.rs  keyboard.rs  main.rs  midi.rs  midi_input.rs  state.rs
src/lib/: version.js  version.test.js
src/lib/components/: BandMode.svelte  FavoritesView.svelte  Header.svelte  KeyboardDisplay.svelte  LibraryShare.svelte  LivePlayView.svelte  MidiFileList.svelte  PlaybackControls.svelte  PlaylistManager.svelte  SavedPlaylistsView.svelte  SettingsView.svelte  SongContextMenu.svelte  StatsView.svelte  Timeline.svelte  Visualizer.svelte
src/lib/i18n/: index.js
src/lib/stores/: band.js  keyboard.js  library.js  player.js  windowState.js
src/lib/tauri/: core-proxy.js
src/lib/utils/: playerStats.js  playerStats.test.js  uiActionLogger.js
src/tests/: componentsSmoke.test.mjs  i18n.test.js  modules.test.mjs
src/tests/stores/: player.test.js
