[package]
name = "wwm-overlay"
version = "0.1.0"
description = "MIDI Player Overlay for Black Desert"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
midly = "0.5"
enigo = "0.2"
lazy_static = "1.4"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading"] }
tauri-plugin-dialog = "2.4.2"
xcap = "0.0.14"
image = "0.25"
open = "5"
ureq = "2"
base64 = "0.22"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
zip = "2"
log = "0.4"
simplelog = "0.12"
rayon = "1.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "wwm-overlay"
path = "src/main.rs"

[profile.release]
# '3' is default for release, can optimize for speed
opt-level = 3 
# Speeds up compile times by allowing more parallel compilation units (default is 256 in dev, 1 in release)
codegen-units = 256 # (Experiment with values > 1)
# Disabling LTO can speed up compilation, but increases app size and reduces runtime performance
lto = false
# Strip debug symbols
strip = true
